[package]
name = "sentinel-tearsheet"
version = "1.0.1"
edition = "2021"
description = "VQ-Capital Institutional Grade Tearsheet Generator"

[dependencies]
# Asenkron Runtime & Hata Yönetimi
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"

# CLI & Loglama
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Ağ ve Veri İşleme (Offline / Raporlama Katmanı)
reqwest = { version = "0.11", features = ["rustls-tls"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
urlencoding = "2.1" # 🔥 CERRAHİ DÜZELTME: Eksik bağımlılık eklendi